
import "community.proto";

package weizhu.community.dao;

option java_package = "com.weizhu.service.community";
option java_outer_classname = "CommunityDAOProtos";

message CommunityInfo {
  required string                    community_name            = 1;
  repeated weizhu.community.Board    board                     = 2;
  repeated RecommendPostListIndex    recommend_post_index      = 3; // 推荐帖子索引列表，最多10条
}

// 帖子计数，需要分状态计数
message PostCount {
  required weizhu.community.Post.State state = 1;
  required int32                       count = 2;
}

// 帖子索引，用于在帖子列表中定位
message PostListIndex {
  required int32                       post_id     = 1;
  required int32                       create_time = 2;
  optional int32                       sticky_time = 3;
  required weizhu.community.Post.State state       = 4;
  optional bool                        is_sticky   = 5;
  
}

// 板块扩展信息结构
message BoardExt {
  repeated PostCount       count              = 1; // 帖子按状态计数
  repeated PostListIndex   index              = 2; // 最近n条帖子的索引列表
  repeated PostListIndex   sticky_post_index  = 3; // 置顶帖子列表索引，最多10条
  repeated string          tag                = 4; // 标签
}

// 板块下热帖索引列表
message BoardHotPostIndexList {
  repeated HotPostListIndex hotPostListIndex = 1;
}

// 板块下热帖列表索引
message HotPostListIndex {
  required int32                       post_id     = 1;
  required weizhu.community.Post.State state       = 2;
}

// 评论计数，需要分状态计数
message CommentCount {
  required weizhu.community.Comment.State state = 1;
  required int32                          count = 2;
}

// 帖子扩展信息
message PostExt {
  repeated CommentCount comment_count      = 1; // 评论分状态计数
  required int32        like_count         = 2;
  repeated string       tag                = 3; // 标签
}

// 帖子下的评论列表索引
message PostCommentListIndex {
  required int32 comment_id = 1;
}

// 用户下的评论列表索引
message UserCommentListIndex {
  required int32 post_id     = 1;
  required int32 comment_id  = 2;
  required int32 create_time = 3;
}

// 帖子索引，用于在帖子列表中定位
message RecommendPostListIndex {
  required int32                       post_id        = 1;
  optional int32                       recommend_time = 2;
  required weizhu.community.Post.State state          = 3;
}

// 帖子下评论扩展信息
message PostCommentExt {
  required int32        like_count           = 1; // 评论的点赞个数
}
